welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:5: error: identifier expected but '(' found.
			setCouleurBrosse(T.(i))
                                           ^Array1:12: error: ')' expected but 'for' found.
	for (i <- 0 to T.length - 1) {
        ^